DTO continued for features

--- a/ASPDotNetWebApplication/ASPDotNetWebApplication.csproj
+++ b/ASPDotNetWebApplication/ASPDotNetWebApplication.csproj
@@ -173,9 +173,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Context\AppDbContext.cs" />
+    <Compile Include="Controllers\API\FeaturesController.cs" />
     <Compile Include="Controllers\API\ItemsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
+    <Compile Include="Dtos\FeatureDTO.cs" />
     <Compile Include="Dtos\ItemDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
